--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Júlia Pereira</h1>
+							<h1><span class="image main"><img src="images/logo.png" alt="" /></span> </h1>
 							<p>Aconselhamento Nutricional com foco na SAÚDE</p>
 							<ul class="actions">
 								<li> </li>
