--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section class="intro">
 						<header>
 							<h1><span class="image main"><img src="images/logo.png" alt="" /></span> </h1>
-							<p>Aconselhamento Nutricional com foco na SAÚDE</p>
+							<h3 style="color: #fff;">Aconselhamento Nutricional com foco na SAÚDE</h3>
 							<ul class="actions">
 								<li> </li>
 							</ul>
