--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<section>
 									<header>
 										<h3>semente da saúde</h3> 
-										<p>Se você está pronto para embarcar em uma jornada de saúde transformadora, estou aqui para auxiliar. Vamos nutrir seu corpo, mente e alma juntos, e celebrar cada passo em direção a uma vida mais saudável e plena.</p>
+										<p>Se você está pronto(a) para embarcar em uma jornada de saúde transformadora, estou aqui para auxiliar. Vamos nutrir seu corpo, mente e alma juntos, e celebrar cada passo em direção a uma vida mais saudável e plena.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -417,7 +417,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>REDES</h3>
 									<ul class="icons">
-										<li><a href="https://wa.me/558597215840?text=Ol%C3%A1!%20Achei%20seu%20contato%20no%20site.%20Tenho%20interesse%20nas%20suas%20consultas%20de%20nutri%C3%A7%C3%A3o%20integrativa." class="icon brands fa-whatsapp"><span class="label">Twitter</span></a></li>
+										<li><a href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você" class="icon brands fa-whatsapp"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.instagram.com/juliapereira.nutri/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> 
 								
 									</ul>
