--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						</footer>
 					</section>
 
-				<!-- Copyright 
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+				<!-- Copyright -->
+					<div class="copyright"><a href="https://html5up.net" style="opacity: 0.1;">HTML5 UP</a>.</div>
 
 			</div>
-			-->
+			
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
