--- a/index bkp.html
+++ b/index bkp.html
@@ -29,7 +29,7 @@
 				<br>
 				<br>
 				<div class="content">
-					<h3 style="color: #000;">Atendimento online</h3>
+					<h3 style="color: #000;">Atendimento online</h3> 
 					<ul class="actions" style="justify-content: center;
 								display: flex;">
 						<li><a target="_blank" rel="noopener noreferrer"
@@ -54,14 +54,9 @@
 				<h2>Sobre mim</h2>
 			</header>
 			<div class="content">
-				<p>Com dedicação de mais de 6 anos à Nutrição Clínica Integrativa, ao Mindful Eating e à Nutrição
-					Vegetariana, ofereço um serviço de nutrição que vai além das dietas convencionais, focando na saúde
-					integral do cliente, considerando corpo, mente e espírito.
-					<br>
-					<br>
-					A minha abordagem é personalizada, sensível e realista, visando melhorar a relação com a comida,
-					desenvolver a autonomia alimentar e melhorar os sintomas associados à má alimentação.
-				</p>
+				<p>Bem-vindo ao meu espaço de <strong> nutrição integrativa</strong>! Acredito que a chave para uma
+					saúde vibrante está em entender e honrar as complexidades de cada pessoa, considerando não apenas
+					sua dieta, mas também seu estilo de vida, histórico de saúde e fatores emocionais.</p>
 				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 
 			</div>
