--- a/index.html
+++ b/index.html
@@ -56,14 +56,18 @@
 			<div class="content">
 				<p>Com dedicação de mais de 6 anos à Nutrição Clínica Integrativa, ao Mindful Eating e à Nutrição
 					Vegetariana, ofereço um serviço de nutrição que vai além das dietas convencionais, focando na saúde
-					integral do cliente, considerando corpo, mente e espírito.
-					<br>
+					integral do paciente, considerando corpo, mente e espírito.<br>
 					<br>
 					A minha abordagem é personalizada, sensível e realista, visando melhorar a relação com a comida,
 					desenvolver a autonomia alimentar e melhorar os sintomas associados à má alimentação.
 				</p>
 				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-
+				<ul class="actions" style="justify-content: center;
+				display: flex;">
+					<li><a target="_blank" rel="noopener noreferrer"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							class="button large scrolly">TEM ALGUMA DÚVIDA? ENTRE EM CONTATO 📞</a></li>
+				</ul>
 			</div>
 
 		</section>
@@ -71,11 +75,25 @@
 		<!-- Section -->
 		<section>
 			<header>
-				<h2>Abordagem</h2>
+				<h2>ABORDAGEM INTEGRATIVA</h2>
 			</header>
 			<div class="content" id="second">
-				<p>Sou impulsionada por ajudar meus clientes a descobrirem o poder dos alimentos e hábitos saudáveis não
-					apenas para nutrir seus corpos, mas também suas mentes e espíritos.</p>
+				<p>Acredito que a chave para uma
+					saúde vibrante está em entender e honrar as complexidades de cada pessoa, considerando não apenas
+					sua dieta, mas também seu estilo de vida, histórico de saúde e fatores emocionais. Para isto, minha
+					abordagem inclui:
+
+				</p>
+				<p>• Consultas detalhadas e personalizadas que podem durar até 2 horas <br>
+					• Acompanhamento por WhatsApp ao longo de todo o processo<br>
+					• Elaboração de estratégia individualizada de rotina e planejamento alimentar<br>
+					• Entrega de material de apoio com orientações detalhadas
+				</p>
+
+
+
+				<p> <strong> Agende uma consulta individual ou compre um pacote com desconto em quatro
+						consultas!</strong></p>
 				<!--<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Consequat tempus</li>
 								<li class="icon solid fa-bolt">Etiam adipiscing</li>
@@ -85,10 +103,53 @@
 								<li class="icon solid fa-code">Nibh amet venenatis</li>
 							</ul>
 						-->
-				<p>Meu compromisso é guiar meus clientes na criação de hábitos saudáveis que sejam sustentáveis e
-					gratificantes. Acredito que pequenas mudanças progressivas podem levar a resultados duradouros.
-					Trabalharemos juntos para explorar suas metas de saúde, identificar áreas de melhoria e desenvolver
-					um plano personalizado que o capacite a alcançar um estado de equilíbrio e vitalidade duradouro.</p>
+				<ul class="actions" style="justify-content: center;
+						display: flex;">
+					<li><a target="_blank" rel="noopener noreferrer"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							class="button large scrolly">SEJA ATENDIDO SEM SAIR DE CASA 📞</a></li>
+
+				</ul>
+			</div>
+		</section>
+
+		<section>
+			<header>
+				<h2>atendimento </h2>
+			</header>
+			<div class="content" id="second">
+				<p>A principal vantagem do meu atendimento está no olhar integral para a saúde humana, considerando a
+					simplicidade e a realidade individual de cada pessoa.
+
+				</p>
+				<p>• Atendimento personalizado <br>
+					• Acompanhamento ativo no processo<br>
+					• Alinhamento às necessidades específicas<br>
+					• Abordagem sensível e acolhedora<br>
+					• Escuta ativa e empática<br>
+					• Respeito à individualidade<br>
+					• Compromisso profissional<br>
+
+				</p>
+
+				<p><strong>Eu posso ajudar você a construir uma relação mais equilibrada com a comida!</strong> </p>
+
+				<!--<ul class="feature-icons">
+								<li class="icon solid fa-laptop">Consequat tempus</li>
+								<li class="icon solid fa-bolt">Etiam adipiscing</li>
+								<li class="icon solid fa-signal">Libero nullam</li>
+								<li class="icon solid fa-cog">Blandit condimentum</li>
+								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
+								<li class="icon solid fa-code">Nibh amet venenatis</li>
+							</ul>
+						-->
+				<ul class="actions" style="justify-content: center;
+						display: flex;">
+					<li><a target="_blank" rel="noopener noreferrer"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							class="button large scrolly">AGENDE A SUA CONSULTA ON-LINE! 📞 </a></li>
+
+				</ul>
 			</div>
 		</section>
 
