--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 				<br>
 				<br>
 				<div class="content">
-					<h3 style="color: #000;">Atendimento online</h3>
+			
 					<ul class="actions" style="justify-content: center;
 								display: flex;">
 						<li><a target="_blank" rel="noopener noreferrer"
 								href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-								class="button MEDIUM scrolly">Agende sua consulta</a></li>
-						<li><a href="#first" class="button primary MEDIUM scrolly">Saiba mais</a></li>
+								class="button large scrolly">Atendimento online</a></li>
+						<li><a href="#first" class="button primary large scrolly">Saiba mais</a></li>
 					</ul>
 				</div>
 				<!--<ul class="actions">
