--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button large scrolly">TEM ALGUMA DÚVIDA? ENTRE EM CONTATO 📞</a></li>
+							class="button large scrolly">ENTRE EM CONTATO</a></li>
 				</ul>
 			</div>
 
