--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<br>
 				<br>
 				<div class="content">
-			
+
 					<ul class="actions" style="justify-content: center;
 								display: flex;">
 						<li><a target="_blank" rel="noopener noreferrer"
@@ -62,11 +62,23 @@
 					desenvolver a autonomia alimentar e melhorar os sintomas associados à má alimentação.
 				</p>
 				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+				<p><strong>Eu posso ajudar você a construir uma relação mais equilibrada com a comida!</strong> </p>
 				<ul class="actions" style="justify-content: center;
 				display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button large scrolly">ENTRE EM CONTATO</a></li>
+							class="button primary large scrolly">ENTRE EM CONTATO</a></li>
+
+				</ul>
+				<ul class="icons" style="justify-content: center;
+				display: flex;">
+
+					<li><a target="_blank" rel="noopener noreferrer"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							class="icon brands fa-whatsapp"><span class="label">Zap</span></a></li>
+					<li><a target="_blank" rel="noopener noreferrer"
+							href="https://www.instagram.com/juliapereira.nutri/" class="icon brands fa-instagram"><span
+								class="label">Instagram</span></a></li>
 				</ul>
 			</div>
 
@@ -107,7 +119,7 @@
 						display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button large scrolly">SEJA ATENDIDO SEM SAIR DE CASA 📞</a></li>
+							class="button primary large scrolly">SEJA ATENDIDO SEM SAIR DE CASA 📞</a></li>
 
 				</ul>
 			</div>
@@ -137,7 +149,7 @@
 				</section>
 
 				<!--  -->
-				
+
 		</section>
 		<section>
 			<header>
@@ -158,7 +170,7 @@
 
 				</p>
 
-				<p><strong>Eu posso ajudar você a construir uma relação mais equilibrada com a comida!</strong> </p>
+
 
 				<!--<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Consequat tempus</li>
@@ -173,7 +185,7 @@
 						display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button large scrolly">AGENDE A SUA CONSULTA ON-LINE! 📞 </a></li>
+							class="button primary large scrolly">AGENDE A SUA CONSULTA ON-LINE! 📞 </a></li>
 
 				</ul>
 			</div>
@@ -186,7 +198,7 @@
 			</header>
 			<div class="content">
 				<!-- Section -->
-				
+
 
 				<!--  -->
 				<section>
@@ -238,7 +250,7 @@
 						<ul class="icons">
 							<li><a target="_blank" rel="noopener noreferrer"
 									href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-									class="icon brands fa-whatsapp"><span class="label">Twitter</span></a></li>
+									class="icon brands fa-whatsapp"><span class="label">Zap</span></a></li>
 							<li><a target="_blank" rel="noopener noreferrer"
 									href="https://www.instagram.com/juliapereira.nutri/"
 									class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -264,6 +276,8 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script type="module"
+		src="https://unpkg.com/@nocodeapi/embed-instagram-feed@latest/embed-instagram-feed.js?module"></script>
 
 </body>
 
