--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button primary large scrolly">SEJA ATENDIDO SEM SAIR DE CASA 📞</a></li>
+							class="button primary large scrolly">SEJA ATENDIDO SEM SAIR DE CASA</a></li>
 
 				</ul>
 			</div>
@@ -185,7 +185,7 @@
 						display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button primary large scrolly">AGENDE A SUA CONSULTA ON-LINE! 📞 </a></li>
+							class="button primary large scrolly">AGENDE A SUA CONSULTA ON-LINE!</a></li>
 
 				</ul>
 			</div>
