--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 				<h2>Sobre mim</h2>
 			</header>
 			<div class="content">
-				<p>Com dedicação de mais de 6 anos à Nutrição Clínica Integrativa, ao Mindful Eating e à Nutrição
-					Vegetariana, ofereço um serviço de nutrição que vai além das dietas convencionais, focando na saúde
-					integral do paciente, considerando corpo, mente e espírito.<br>
+				<p>Com dedicação de mais de 6 anos à <strong>Nutrição Clínica Integrativa</strong> , ao <strong>Mindful Eating</strong> e à <strong>Nutrição
+					Vegetariana</strong>, ofereço um serviço de nutrição que vai além das dietas convencionais, focando na saúde
+					integral do paciente, considerando <strong>corpo, mente e espírito</strong>.<br>
 					<br>
 					A minha abordagem é personalizada, sensível e realista, visando melhorar a relação com a comida,
-					desenvolver a autonomia alimentar e melhorar os sintomas associados à má alimentação.
+					<strong>desenvolver a autonomia alimentar</strong> e melhorar os sintomas associados à má alimentação.
 				</p>
 				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 				<p><strong>Eu posso ajudar você a construir uma relação mais equilibrada com a comida!</strong> </p>
@@ -104,8 +104,7 @@
 
 
 
-				<p> <strong> Agende uma consulta individual ou compre um pacote com desconto em quatro
-						consultas!</strong></p>
+				
 				<!--<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Consequat tempus</li>
 								<li class="icon solid fa-bolt">Etiam adipiscing</li>
@@ -170,7 +169,8 @@
 
 				</p>
 
-
+				<p> <strong> Agende uma consulta individual ou compre um pacote com desconto em quatro
+					consultas!</strong></p>
 
 				<!--<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Consequat tempus</li>
@@ -185,7 +185,7 @@
 						display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button primary large scrolly">AGENDE A SUA CONSULTA ON-LINE!</a></li>
+							class="button primary large scrolly">AGENDE A SUA CONSULTA!</a></li>
 
 				</ul>
 			</div>
