--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		<section class="intro">
 			<header>
 				<h1><span class="image main"><img src="images/logo.png" alt="" /></span> </h1>
-				<h3 style="color: #fff;">Aconselhamento Nutricional com foco na SAÚDE</h3>
+				<h3 style="color: #fff;">- NUTRICIONISTA VEGANA - Aconselhamento Nutricional com foco na SAÚDE Da Mulher
+				</h3>
 				<br>
 				<br>
 				<div class="content">
@@ -34,7 +35,7 @@
 								display: flex;">
 						<li><a target="_blank" rel="noopener noreferrer"
 								href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-								class="button large scrolly">Atendimento online</a></li>
+								class="button large scrolly">Agende aqui</a></li>
 						<li><a href="#first" class="button primary large scrolly">Saiba mais</a></li>
 					</ul>
 				</div>
@@ -48,26 +49,67 @@
 			</div>
 		</section>
 
+		<section>
+			<header>
+				<h2>atendimento </h2>
+			</header>
+			<div class="content" id="second">
+				<p>Se você quer transformar os seus hábitos com o auxilio de uma profissional cuidadosa, eu sou a sua
+					nutricionista! Através de um olhar integral para a saúde humana,
+					considerando a realidade individual de cada pessoa e a <strong>simplicidade</strong> como a
+					<strong>melhor solução</strong>, realizo atendimento clínico para:
+
+				</p>
+				<p><strong>
+						• Avaliação metabólica </strong> através da leitura e da interpretação de exames de sangue<br>
+					• <strong> Orientação de alimentação</strong> e de rotina direcionada para mulheres e para<strong>
+						vegetarianas\veganas </strong>(ou em transição) <br>
+
+					•<strong> Prescrição de suplementação </strong>(se necessária)<br>
+
+
+				</p>
+
+
+
+				<!--<ul class="feature-icons">
+								<li class="icon solid fa-laptop">Consequat tempus</li>
+								<li class="icon solid fa-bolt">Etiam adipiscing</li>
+								<li class="icon solid fa-signal">Libero nullam</li>
+								<li class="icon solid fa-cog">Blandit condimentum</li>
+								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
+								<li class="icon solid fa-code">Nibh amet venenatis</li>
+							</ul>
+						-->
+				<ul class="actions" style="justify-content: center;
+						display: flex;">
+					<li><a target="_blank" rel="noopener noreferrer"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							class="button primary large scrolly">AGENDE A SUA CONSULTA!</a></li>
+
+				</ul>Te conduzo para que você aprenda a fazer escolhas mais saudáveis a longo prazo. Não trabalho com
+				dietas restritivas!
+			</div>
+		</section>
 		<!-- Section -->
 		<section id="first">
 			<header>
 				<h2>Sobre mim</h2>
 			</header>
 			<div class="content">
-				<p>Com dedicação de mais de 6 anos à <strong>Nutrição Clínica Integrativa</strong> , ao <strong>Mindful Eating</strong> e à <strong>Nutrição
-					Vegetariana</strong>, ofereço um serviço de nutrição que vai além das dietas convencionais, focando na saúde
-					integral do paciente, considerando <strong>corpo, mente e espírito</strong>.<br>
+				<p>Vegana há 8 anos e dedicada ao estudo do <strong>Ayurveda,</strong> do <strong>Yoga</strong>, da
+					<strong> Nutrição Clínica Integrativa</strong> (pós graduada) e da Avaliação Metabólica (aluna do
+					Dr. Eric Slywitch). Considero o seu contexto e comportamento alimentar porque sei que a saúde é uma
+					integraão entre <strong>corpo, mente e espírito</strong>.<br>
 					<br>
-					A minha abordagem é personalizada, sensível e realista, visando melhorar a relação com a comida,
-					<strong>desenvolver a autonomia alimentar</strong> e melhorar os sintomas associados à má alimentação.
-				</p>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-				<p><strong>Eu posso ajudar você a construir uma relação mais equilibrada com a comida!</strong> </p>
+
+					<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+				<p><strong></strong> </p>
 				<ul class="actions" style="justify-content: center;
 				display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button primary large scrolly">ENTRE EM CONTATO</a></li>
+							class="button primary large scrolly">agende um horário comigo </a></li>
 
 				</ul>
 				<ul class="icons" style="justify-content: center;
@@ -90,21 +132,20 @@
 				<h2>ABORDAGEM INTEGRATIVA</h2>
 			</header>
 			<div class="content" id="second">
+				A minha abordagem é o aconselhamento nutricional
+				"Um encontro entra duas pessoas para examinar com atenão, olhar com respeito e deliberar com prudência e
+				justeza sobre a alimentação de uma delas."
+
+				Se você procura uma <strong> abordagem personalizada, sensível e realista</strong>, que busca melhorar a
+				relação com a comida</strong>, desenvolver a autonomia alimentar</strong> e melhorar os sintomas
+				associados à má alimentação, então, <strong>o aconselhamento nutricional é para você.
+				</strong></p>
 				<p>Acredito que a chave para uma
-					saúde vibrante está em entender e honrar as complexidades de cada pessoa, considerando não apenas
-					sua dieta, mas também seu estilo de vida, histórico de saúde e fatores emocionais. Para isto, minha
-					abordagem inclui:
+					saúde vibrante está em entender e honrar as complexidades de cada pessoa.
 
 				</p>
-				<p>• Consultas detalhadas e personalizadas que podem durar até 2 horas <br>
-					• Acompanhamento por WhatsApp ao longo de todo o processo<br>
-					• Elaboração de estratégia individualizada de rotina e planejamento alimentar<br>
-					• Entrega de material de apoio com orientações detalhadas
-				</p>
 
 
-
-				
 				<!--<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Consequat tempus</li>
 								<li class="icon solid fa-bolt">Etiam adipiscing</li>
@@ -118,23 +159,26 @@
 						display: flex;">
 					<li><a target="_blank" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button primary large scrolly">SEJA ATENDIDO SEM SAIR DE CASA</a></li>
+							class="button primary large scrolly">agende consulta online </a></li>
 
 				</ul>
 			</div>
 		</section>
+
 		<section>
 			<header>
 				<h2>natureza e ciência</h2>
 			</header>
 			<div class="content">
 				<!-- Section -->
+
 				<section>
 					<header>
 
-						<p>Acredito na integração do conhecimento proveniente da natureza e da ciência para promover um
+						<p style="color: #fff; ">Acredito na integração do conhecimento proveniente da natureza e da
+							ciência para promover um
 							estilo de vida saudável, equilibrado e sustentável. Meu propósito é inspirar e educar,
-							criando um ambiente onde o saber se entrelaça livremente, capacitando você a tomar decisões
+							criando um ambiente onde o saber se entrelaça li vremente, capacitando você a tomar decisões
 							conscientes em relação à sua saúde e hábitos.</p>
 					</header>
 					<div class="content">
@@ -150,46 +194,7 @@
 				<!--  -->
 
 		</section>
-		<section>
-			<header>
-				<h2>atendimento </h2>
-			</header>
-			<div class="content" id="second">
-				<p>A principal vantagem do meu atendimento está no olhar integral para a saúde humana, considerando a
-					simplicidade e a realidade individual de cada pessoa.
 
-				</p>
-				<p>• Atendimento personalizado <br>
-					• Acompanhamento ativo no processo<br>
-					• Alinhamento às necessidades específicas<br>
-					• Abordagem sensível e acolhedora<br>
-					• Escuta ativa e empática<br>
-					• Respeito à individualidade<br>
-					• Compromisso profissional<br>
-
-				</p>
-
-				<p> <strong> Agende uma consulta individual ou compre um pacote com desconto em quatro
-					consultas!</strong></p>
-
-				<!--<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
-							</ul>
-						-->
-				<ul class="actions" style="justify-content: center;
-						display: flex;">
-					<li><a target="_blank" rel="noopener noreferrer"
-							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-							class="button primary large scrolly">AGENDE A SUA CONSULTA!</a></li>
-
-				</ul>
-			</div>
-		</section>
 
 		<!-- Section -->
 		<section>
@@ -204,7 +209,8 @@
 				<section>
 					<header>
 						<h3></h3>
-						<p>Se você está pronto(a) para embarcar em uma jornada de saúde transformadora, estou aqui para
+						<p style="color: #fff; ">Se você está pronto(a) para embarcar em uma jornada de saúde
+							transformadora, estou aqui para
 							auxiliar. Vamos nutrir seu corpo, mente e alma juntos, e celebrar cada passo em direção a
 							uma vida mais saudável e plena.</p>
 
@@ -218,12 +224,13 @@
 
 						</ul>
 					</header>
-					<div class="content">
+					<!--<div class="content">
 						<div class="gallery">
 							<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 							<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 						</div>
 					</div>
+				-->
 				</section>
 		</section>
 
@@ -241,7 +248,7 @@
 
 					<li>
 						<h3>Email</h3>
-						<span>nutricionistajuliapereira@gmail.com</span>
+						<span style="color: #fff; ">nutricionistajuliapereira@gmail.com</span>
 					</li>
 
 
