--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						<p style="color: #fff; ">Acredito na integração do conhecimento proveniente da natureza e da
 							ciência para promover um
 							estilo de vida saudável, equilibrado e sustentável. Meu propósito é inspirar e educar,
-							criando um ambiente onde o saber se entrelaça li vremente, capacitando você a tomar decisões
+							criando um ambiente onde o saber se entrelaça livremente, capacitando você a tomar decisões
 							conscientes em relação à sua saúde e hábitos.</p>
 					</header>
 					<div class="content">
@@ -209,7 +209,7 @@
 				<section>
 					<header>
 						<h3></h3>
-						<p style="color: #fff; ">Se você está pronto(a) para embarcar em uma jornada de saúde
+						<p style="color: #fff; ">Se você está pronta para embarcar em uma jornada de saúde
 							transformadora, estou aqui para
 							auxiliar. Vamos nutrir seu corpo, mente e alma juntos, e celebrar cada passo em direção a
 							uma vida mais saudável e plena.</p>
