--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 					<ul class="actions" style="justify-content: center;
 								display: flex;">
-						<li><a target="_blank" rel="noopener noreferrer"
+						<li><a target="_self" rel="noopener noreferrer"
 								href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
 								class="button large scrolly">Agende aqui</a></li>
 						<li><a href="#first" class="button primary large scrolly">Saiba mais</a></li>
@@ -83,7 +83,7 @@
 						-->
 				<ul class="actions" style="justify-content: center;
 						display: flex;">
-					<li><a target="_blank" rel="noopener noreferrer"
+					<li><a target="_self" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
 							class="button primary large scrolly">AGENDE A SUA CONSULTA!</a></li>
 
@@ -107,7 +107,7 @@
 				<p><strong></strong> </p>
 				<ul class="actions" style="justify-content: center;
 				display: flex;">
-					<li><a target="_blank" rel="noopener noreferrer"
+					<li><a target="_self" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
 							class="button primary large scrolly">agende um horário comigo </a></li>
 
@@ -115,12 +115,11 @@
 				<ul class="icons" style="justify-content: center;
 				display: flex;">
 
-					<li><a target="_blank" rel="noopener noreferrer"
+					<li><a target="_self" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
 							class="icon brands fa-whatsapp"><span class="label">Zap</span></a></li>
-					<li><a target="_blank" rel="noopener noreferrer"
-							href="https://www.instagram.com/juliapereira.nutri/" class="icon brands fa-instagram"><span
-								class="label">Instagram</span></a></li>
+					<li><a target="_self" rel="noopener noreferrer" href="https://www.instagram.com/juliapereira.nutri/"
+							class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 			</div>
 
@@ -157,7 +156,7 @@
 						-->
 				<ul class="actions" style="justify-content: center;
 						display: flex;">
-					<li><a target="_blank" rel="noopener noreferrer"
+					<li><a target="_self" rel="noopener noreferrer"
 							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
 							class="button primary large scrolly">agende consulta online </a></li>
 
@@ -173,9 +172,9 @@
 				<!-- Section -->
 
 				<section>
-					<header>
+					<header> 
 
-						<p>Acredito na integração do conhecimento proveniente da natureza e da
+						<p class="outra">Acredito na integração do conhecimento proveniente da natureza e da
 							ciência para promover um
 							estilo de vida saudável, equilibrado e sustentável. Meu propósito é inspirar e educar,
 							criando um ambiente onde o saber se entrelaça livremente, capacitando você a tomar decisões
@@ -188,7 +187,18 @@
 
 							<!--<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a> -->
 						</div>
+						<br>
+						<ul class="actions" style="justify-content: center;
+						display: flex;">
+							<li><a target="_self" rel="noopener noreferrer"
+									href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+									class="button primary large scrolly">AGENDE SUA
+									CONSULTA
+									Comigo!</a></li>
+
+						</ul>
 					</div>
+					
 				</section>
 
 				<!--  -->
@@ -209,20 +219,12 @@
 				<section>
 					<header>
 						<h3></h3>
-						<p>Se você está pronta para embarcar em uma jornada de saúde
+						<p class="outra" >Se você está pronta para embarcar em uma jornada de saúde
 							transformadora, estou aqui para
 							auxiliar. Vamos nutrir seu corpo, mente e alma juntos, e celebrar cada passo em direção a
 							uma vida mais saudável e plena.</p>
 
-						<ul class="actions" style="justify-content: center;
-						display: flex;">
-							<li><a target="_blank" rel="noopener noreferrer"
-									href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
-									class="button large scrolly">AGENDE SUA
-									CONSULTA
-									Comigo!</a></li>
-
-						</ul>
+						
 					</header>
 					<!--<div class="content">
 						<div class="gallery">
@@ -239,26 +241,23 @@
 		<section>
 			<header>
 				<h2>Contato</h2>
-			</header>
-			<br>
-			<br>
-			<footer>
+
 				<ul class="items">
 
 
 					<li>
 						<h3>Email</h3>
-						<span style="color: #fff; ">nutricionistajuliapereira@gmail.com</span>
+						<p style="color: #fff;">nutricionistajuliapereira@gmail.com</p>
 					</li>
 
 
 					<li>
 						<h3>REDES</h3>
 						<ul class="icons">
-							<li><a target="_blank" rel="noopener noreferrer"
+							<li><a target="_self" rel="noopener noreferrer"
 									href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
 									class="icon brands fa-whatsapp"><span class="label">Zap</span></a></li>
-							<li><a target="_blank" rel="noopener noreferrer"
+							<li><a target="_self" rel="noopener noreferrer"
 									href="https://www.instagram.com/juliapereira.nutri/"
 									class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
@@ -267,7 +266,9 @@
 
 					</li>
 				</ul>
-			</footer>
+			</header>
+
+
 		</section>
 
 		<!-- Copyright -->
