--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<ul class="actions" style="justify-content: center;
 								display: flex;">
 						<li><a target="_self" rel="noopener noreferrer"
-								href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+								href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 								class="button large scrolly">Agende aqui</a></li>
 						<li><a href="#first" class="button primary large scrolly">Saiba mais</a></li>
 					</ul>
@@ -84,7 +84,7 @@
 				<ul class="actions" style="justify-content: center;
 						display: flex;">
 					<li><a target="_self" rel="noopener noreferrer"
-							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 							class="button primary large scrolly">AGENDE A SUA CONSULTA!</a></li>
 
 				</ul>Te conduzo para que você aprenda a fazer escolhas mais saudáveis a longo prazo. Não trabalho com
@@ -108,7 +108,7 @@
 				<ul class="actions" style="justify-content: center;
 				display: flex;">
 					<li><a target="_self" rel="noopener noreferrer"
-							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 							class="button primary large scrolly">agende um horário comigo </a></li>
 
 				</ul>
@@ -116,7 +116,7 @@
 				display: flex;">
 
 					<li><a target="_self" rel="noopener noreferrer"
-							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 							class="icon brands fa-whatsapp"><span class="label">Zap</span></a></li>
 					<li><a target="_self" rel="noopener noreferrer" href="https://www.instagram.com/juliapereira.nutri/"
 							class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -157,7 +157,7 @@
 				<ul class="actions" style="justify-content: center;
 						display: flex;">
 					<li><a target="_self" rel="noopener noreferrer"
-							href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+							href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 							class="button primary large scrolly">agende consulta online </a></li>
 
 				</ul>
@@ -191,7 +191,7 @@
 						<ul class="actions" style="justify-content: center;
 						display: flex;">
 							<li><a target="_self" rel="noopener noreferrer"
-									href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+									href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 									class="button primary large scrolly">AGENDE SUA
 									CONSULTA
 									Comigo!</a></li>
@@ -255,7 +255,7 @@
 						<h3>REDES</h3>
 						<ul class="icons">
 							<li><a target="_self" rel="noopener noreferrer"
-									href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber valores e horários disponíveis para agendar minha consulta com você"
+									href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 									class="icon brands fa-whatsapp"><span class="label">Zap</span></a></li>
 							<li><a target="_self" rel="noopener noreferrer"
 									href="https://www.instagram.com/juliapereira.nutri/"
