--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			<header>
 				<h1><span class="image main"><img src="images/logo.png" alt="" /></span> </h1>
 				<h3 style="color: #fff;">- NUTRICIONISTA VEGANA - Aconselhamento Nutricional com foco na SAÚDE Da Mulher
+					<br>
+					 <br>
+					<i>CRN-11 17913</i>
 				</h3>
 				<br>
 				<br>
