--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 								display: flex;">
 						<li><a target="_self" rel="noopener noreferrer"
 								href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
-								class="button large scrolly">Agende aqui</a></li>
-						<li><a href="#first" class="button primary large scrolly">Saiba mais</a></li>
+								class="button primary large scrolly">Agende aqui</a>
+						<li><a href="#first" class="button large scrolly">Saiba mais</a></li>
 					</ul>
 				</div>
 				<!--<ul class="actions">
