--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<section class="intro">
 			<header>
 				<h1><span class="image main"><img src="images/logo.png" alt="" /></span> </h1>
-				<h3 style="color: #fff;">- NUTRICIONISTA VEGANA - Aconselhamento Nutricional com foco na SAÚDE Da Mulher
+				<h3 style="color: #fff;">- Nutrição Integrativa - <br> Aconselhamento Nutricional com foco na SAÚDE Da Mulher
 					<br>
 					 <br>
 					<i>CRN-11 17913</i>
@@ -66,7 +66,7 @@
 				<p><strong>
 						• Avaliação metabólica </strong> através da leitura e da interpretação de exames de sangue<br>
 					• <strong> Orientação de alimentação</strong> e de rotina direcionada para mulheres e para<strong>
-						vegetarianas\veganas </strong>(ou em transição) <br>
+						pessoas vegetarianas\veganas </strong>(ou em transição) <br> 
 
 					•<strong> Prescrição de suplementação </strong>(se necessária)<br>
 
@@ -142,9 +142,9 @@
 				relação com a comida</strong>, desenvolver a autonomia alimentar</strong> e melhorar os sintomas
 				associados à má alimentação, então, <strong>o aconselhamento nutricional é para você.
 				</strong></p>
-				<p>Acredito que a chave para uma
+				<p><strong> Acredito que a chave para uma
 					saúde vibrante está em entender e honrar as complexidades de cada pessoa.
-
+				</strong>
 				</p>
 
 
