--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
 						</ul>
 
-
+						<a style="color: #857754;" href="https://html5up.net" style="opacity: 0.1;">HTML5 UP</a>.
 					</li>
 				</ul>
 			</header>
@@ -275,9 +275,7 @@
 		</section>
 
 		<!-- Copyright -->
-		<div class="copyright"><a href="https://html5up.net" style="opacity: 0.1;">HTML5 UP</a>.</div>
-
-	</div>
+	
 
 
 	<!-- Scripts -->
