--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						-->
 			</header>
 			<div class="content">
-				<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+				<span class="image fill" data-position="center"><img src="images/pic01.webp" alt="" /></span>
 			</div>
 		</section>
 
@@ -106,7 +106,7 @@
 					integraão entre <strong>corpo, mente e espírito</strong>.<br>
 					<br>
 
-					<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image main"><img src="images/pic02.webp" alt="" /></span>
 				<p><strong></strong> </p>
 				<ul class="actions" style="justify-content: center;
 				display: flex;">
@@ -185,10 +185,10 @@
 					</header>
 					<div class="content">
 						<div class="gallery">
-							<a href="images/gallery/fulls/01.jpg" class="landscape"><img
-									src="images/gallery/thumbs/01.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/01.webp" class="landscape"><img
+									src="images/gallery/thumbs/01.webp" alt="" /></a>
 
-							<!--<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a> -->
+							<!--<a href="images/gallery/fulls/04.webp" class="landscape"><img src="images/gallery/thumbs/04.webp" alt="" /></a> -->
 						</div>
 						<br>
 						<ul class="actions" style="justify-content: center;
@@ -231,8 +231,8 @@
 					</header>
 					<!--<div class="content">
 						<div class="gallery">
-							<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-							<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+							<a href="images/gallery/fulls/02.webp"><img src="images/gallery/thumbs/02.webp" alt="" /></a>
+							<a href="images/gallery/fulls/03.webp"><img src="images/gallery/thumbs/03.webp" alt="" /></a>
 						</div>
 					</div>
 				-->
