--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Intro -->
 		<section class="intro">
 			<header>
-				<h1><span class="image main"><img src="images/logo.png" alt="" /></span> </h1>
+				<h1><span class="image main"><img src="images/logo.webp" alt="" /></span> </h1>
 				<h3 style="color: #fff;">- Nutrição Integrativa - <br> Aconselhamento Nutricional com foco na SAÚDE Da Mulher
 					<br>
 					 <br>
