--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</div>
 		</section>
 		<!-- Section -->
-		<section id="first">
+		<section id="sobre">
 			<header>
 				<h2>Sobre mim</h2>
 			</header>
@@ -133,9 +133,9 @@
 			<header>
 				<h2>ABORDAGEM INTEGRATIVA</h2>
 			</header>
-			<div class="content" id="second">
+			<div class="content" id="integrativa">
 				A minha abordagem é o aconselhamento nutricional
-				"Um encontro entra duas pessoas para examinar com atenão, olhar com respeito e deliberar com prudência e
+				"Um encontro entra duas pessoas para examinar com atenção, olhar com respeito e deliberar com prudência e
 				justeza sobre a alimentação de uma delas."
 
 				Se você procura uma <strong> abordagem personalizada, sensível e realista</strong>, que busca melhorar a
