--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<li><a target="_self" rel="noopener noreferrer"
 								href="https://wa.me/558597215840?text=Olá, Júlia! Quero agendar minha consulta com você."
 								class="button primary large scrolly">Agende aqui</a>
-						<li><a href="#first" class="button large scrolly">Saiba mais</a></li>
+						<li><a href="https://wa.me/558597215840?text=Olá, Júlia! Quero saber mais sobre a consulta com você" class="button large scrolly">Saiba mais</a></li>
 					</ul>
 				</div>
 				<!--<ul class="actions">
