--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<p>Vegana há 8 anos e dedicada ao estudo do <strong>Ayurveda,</strong> do <strong>Yoga</strong>, da
 					<strong> Nutrição Clínica Integrativa</strong> (pós graduada) e da Avaliação Metabólica (aluna do
 					Dr. Eric Slywitch). Considero o seu contexto e comportamento alimentar porque sei que a saúde é uma
-					integraão entre <strong>corpo, mente e espírito</strong>.<br>
+					integração entre <strong>corpo, mente e espírito</strong>.<br>
 					<br>
 
 					<span class="image main"><img src="images/pic02.webp" alt="" /></span>
